--- a/parts/header-centered-nav-cta.html
+++ b/parts/header-centered-nav-cta.html
@@ -1,19 +1,19 @@
-<!-- wp:group {"style":{"position":{"type":""}},"layout":{"type":"default"}} -->
-<div class="wp-block-group"><!-- wp:columns -->
-<div class="wp-block-columns"><!-- wp:column {"verticalAlignment":"center","width":"10%"} -->
-<div class="wp-block-column is-vertically-aligned-center" style="flex-basis:10%"><!-- wp:site-logo /--></div>
-<!-- /wp:column -->
-
-<!-- wp:column {"verticalAlignment":"center","width":"","layout":{"type":"constrained","justifyContent":"center"}} -->
-<div class="wp-block-column is-vertically-aligned-center"><!-- wp:navigation {"ref":79605,"layout":{"type":"flex","justifyContent":"center"}} /--></div>
-<!-- /wp:column -->
-
-<!-- wp:column {"width":"15%","layout":{"type":"constrained"}} -->
-<div class="wp-block-column" style="flex-basis:15%"><!-- wp:buttons {"layout":{"type":"flex","justifyContent":"space-between"}} -->
-<div class="wp-block-buttons"><!-- wp:button {"width":100} -->
-<div class="wp-block-button has-custom-width wp-block-button__width-100"><a class="wp-block-button__link wp-element-button">Contact Us</a></div>
-<!-- /wp:button --></div>
-<!-- /wp:buttons --></div>
-<!-- /wp:column --></div>
-<!-- /wp:columns --></div>
-<!-- /wp:group -->
+<!-- wp:group {"style":{"position":{"type":""},"spacing":{"padding":{"right":"var:preset|spacing|50","left":"var:preset|spacing|50"}}},"layout":{"type":"default"}} -->
+<div class="wp-block-group" style="padding-right:var(--wp--preset--spacing--50);padding-left:var(--wp--preset--spacing--50)"><!-- wp:columns {"verticalAlignment":"center"} -->
+    <div class="wp-block-columns are-vertically-aligned-center"><!-- wp:column {"verticalAlignment":"center","width":"10%"} -->
+    <div class="wp-block-column is-vertically-aligned-center" style="flex-basis:10%"><!-- wp:site-logo {"width":80,"shouldSyncIcon":true} /--></div>
+    <!-- /wp:column -->
+    
+    <!-- wp:column {"verticalAlignment":"center","width":"","layout":{"type":"default"}} -->
+    <div class="wp-block-column is-vertically-aligned-center"><!-- wp:navigation {"ref":79605,"icon":"menu","layout":{"type":"flex","justifyContent":"center"},"style":{"spacing":{"blockGap":"var:preset|spacing|40"}}} /--></div>
+    <!-- /wp:column -->
+    
+    <!-- wp:column {"verticalAlignment":"center","width":"15%","layout":{"type":"default"}} -->
+    <div class="wp-block-column is-vertically-aligned-center" style="flex-basis:15%"><!-- wp:buttons {"layout":{"type":"flex","justifyContent":"space-between"}} -->
+    <div class="wp-block-buttons"><!-- wp:button {"width":100} -->
+    <div class="wp-block-button has-custom-width wp-block-button__width-100"><a class="wp-block-button__link wp-element-button">Contact Us</a></div>
+    <!-- /wp:button --></div>
+    <!-- /wp:buttons --></div>
+    <!-- /wp:column --></div>
+    <!-- /wp:columns --></div>
+    <!-- /wp:group -->
