--- a/parts/header.html
+++ b/parts/header.html
@@ -1,2 +1,5 @@
-<!-- wp:site-title {"textAlign":"center"} /-->
-<!-- wp:site-tagline {"textAlign":"center"} /-->
+<!-- wp:group {"style":{"spacing":{"blockGap":"0"}},"layout":{"type":"flex","orientation":"vertical","justifyContent":"center","verticalAlignment":"center"}} -->
+<div class="wp-block-group"><!-- wp:site-title {"textAlign":"center","textColor":"foreground"} /-->
+
+    <!-- wp:site-tagline /--></div>
+    <!-- /wp:group -->
