Update Theme to 0.6.1 - Fixed Mobile

--- a/parts/header-with-nav-btn.html
+++ b/parts/header-with-nav-btn.html
@@ -1,8 +1,8 @@
-<!-- wp:group {"style":{"position":{"type":""}},"layout":{"type":"flex","flexWrap":"nowrap","justifyContent":"space-between"}} -->
-<div class="wp-block-group"><!-- wp:group {"style":{"spacing":{"blockGap":"0"}},"layout":{"type":"flex","orientation":"vertical","justifyContent":"left","verticalAlignment":"center"}} -->
+<!-- wp:group {"style":{"position":{"type":""},"spacing":{"padding":{"right":"var:preset|spacing|40","left":"var:preset|spacing|40"}}},"layout":{"type":"flex","flexWrap":"wrap","justifyContent":"space-between"}} -->
+<div class="wp-block-group" style="padding-right:var(--wp--preset--spacing--40);padding-left:var(--wp--preset--spacing--40)"><!-- wp:group {"style":{"spacing":{"blockGap":"0"}},"layout":{"type":"flex","orientation":"vertical","justifyContent":"left","verticalAlignment":"center"}} -->
     <div class="wp-block-group"><!-- wp:site-title {"textAlign":"center","style":{"typography":{"textDecoration":"none"}},"textColor":"foreground"} /-->
     
-    <!-- wp:site-tagline {"style":{"typography":{"textDecoration":"none"}}} /--></div>
+    <!-- wp:site-tagline {"style":{"typography":{"textDecoration":"none"},"layout":{"selfStretch":"fit","flexSize":null}}} /--></div>
     <!-- /wp:group -->
     
     <!-- wp:buttons -->
