Seo Improved - Fixed Mobile/Padding issue - Add title to pages

--- a/parts/header-with-nav-btn.html
+++ b/parts/header-with-nav-btn.html
@@ -1,6 +1,6 @@
 <!-- wp:group {"style":{"position":{"type":""},"spacing":{"padding":{"right":"var:preset|spacing|40","left":"var:preset|spacing|40"}}},"layout":{"type":"flex","flexWrap":"wrap","justifyContent":"space-between"}} -->
-<div class="wp-block-group" style="padding-right:var(--wp--preset--spacing--40);padding-left:var(--wp--preset--spacing--40)"><!-- wp:group {"style":{"spacing":{"blockGap":"0"}},"layout":{"type":"flex","orientation":"vertical","justifyContent":"left","verticalAlignment":"center"}} -->
-    <div class="wp-block-group"><!-- wp:site-title {"textAlign":"center","style":{"typography":{"textDecoration":"none"}},"textColor":"foreground"} /-->
+<div class="wp-block-group" style="padding-right:var(--wp--preset--spacing--40);padding-left:var(--wp--preset--spacing--40)"><!-- wp:group {"style":{"spacing":{"blockGap":"0","padding":{"right":"var:preset|spacing|20","left":"var:preset|spacing|20"}}},"layout":{"type":"flex","orientation":"vertical","justifyContent":"left","verticalAlignment":"center"}} -->
+    <div class="wp-block-group" style="padding-right:var(--wp--preset--spacing--20);padding-left:var(--wp--preset--spacing--20)"><!-- wp:site-title {"level":6,"textAlign":"center","style":{"typography":{"textDecoration":"none"}},"textColor":"foreground","fontSize":"bigger"} /-->
     
     <!-- wp:site-tagline {"style":{"typography":{"textDecoration":"none"},"layout":{"selfStretch":"fit","flexSize":null}}} /--></div>
     <!-- /wp:group -->
