--- a/parts/header.html
+++ b/parts/header.html
@@ -1,5 +1,5 @@
 <!-- wp:group {"style":{"spacing":{"blockGap":"0"}},"layout":{"type":"flex","orientation":"vertical","justifyContent":"center","verticalAlignment":"center"}} -->
-<div class="wp-block-group"><!-- wp:site-title {"textAlign":"center","style":{"typography":{"textDecoration":"none"}},"textColor":"foreground"} /-->
+<div class="wp-block-group"><!-- wp:site-title {"level":6,"textAlign":"center","style":{"typography":{"textDecoration":"none"}},"textColor":"foreground","fontSize":"bigger"} /-->
 
-<!-- wp:site-tagline {"style":{"typography":{"textDecoration":"none"}}} /--></div>
-<!-- /wp:group -->
+    <!-- wp:site-tagline {"style":{"typography":{"textDecoration":"none"}}} /--></div>
+    <!-- /wp:group -->
